@@ -102,7 +102,7 @@
 
 # LdRemoteTester FIOS 2.0
 org.olap4j.test.helperClassName=org.olap4j.LdRemoteOlap4jTester
-org.olap4j.RemoteXmlaTester.JdbcUrl=jdbc:ld://olap4ld;Catalog=LdCatalog;JdbcDrivers=com.mysql.jdbc.Driver;Server=http://public.b-kaempgen.de:8890/sparql;Database=OPENVIRTUOSO;Datastructuredefinitions=http://fios:2;Datasets=http://fios:2;
+org.olap4j.RemoteXmlaTester.JdbcUrl=jdbc:ld://olap4ld;Catalog=LdCatalog;JdbcDrivers=com.mysql.jdbc.Driver;Server=http://public.b-kaempgen.de:8890/sparql;Database=OPENVIRTUOSORULESET;Datastructuredefinitions=http://fios:2,http://fios:2manually;Datasets=http://fios:2,http://fios:2manually;
 
 # LdRemoteTester SMART Dropedia
 #org.olap4j.test.helperClassName=org.olap4j.LdRemoteOlap4jTester
